java script kalkultaor

--- a/front end/WebCalculator/index.html
+++ b/front end/WebCalculator/index.html
@@ -34,5 +34,6 @@
            <div class="button"></div>
        </div>  
     </div>
+    <script src="assets/kalkulator.js"></script>
 </body>
 </html>
